# temp-sense-log

./: .gitignore  Cargo.toml  README.md
hardware/temp_sense_board/: fp-info-cache  fp-lib-table  sym-lib-table  temp_sense_board.kicad_pcb  temp_sense_board.kicad_prl  temp_sense_board.kicad_pro  temp_sense_board.kicad_sch  temp_sense_board.wbk
hardware/temp_sense_board/pico.pretty/: PicoSocket.kicad_mod
log/: env_log.csv
pico_w_firmware/: Cargo.toml  rust-toolchain.toml
pico_w_firmware/src/: main.rs  net_tasks.rs  processing_readings.rs  sensors.rs
python_program/: code.py
src/: main.rs
temp_server/: Cargo.toml  myroom.csv
temp_server/src/: location.rs  main.rs  plotting_route.rs  reading.rs  reading_route.rs  state.rs
