[package]
name = "temp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt","local-time"] }
tokio = { version = "1.42", features = ["fs","io-std","io-util"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }